# RubickAnimations

./: CMakeLists.txt  Matrices.h  Matriz.h  README.md  cubo.h  main.cpp
Algorithms/: F2L.txt  OLL.txt  PLL.txt  Scrambles.txt
Headers/: AdditionalFunctions.h  CubeRepresentation.h  Header.h  ScrambleSimplifier.h  SolvingFunctions.h  Testing Functions.h
Shaders/: shader_s.h  shaderf.fs  shaderv.vs
learnopengl/: camera.h  shader_m.h
